--- a/index.html
+++ b/index.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Kokoa Talk</title>
+    <title>Welcome to Kokoa Clone</title>
   </head>
   <body>
-    <div id="staus bar">
-      <div staus bar-class="">
+    <div class="status-bar">
+      <div class="status-bar__column">
         <span> No service</span>
         <i class="fa-solid fa-wifi"></i>
       </div>
-      <div staus bar-class="">
+      <div class="status-bar__column">
         <span>18:43</span>
       </div>
-      <div staus bar-class="">
+      <div class="status-bar__column">
         <span> 110%</span>
-        <i class="fa-solid fa-battery-full"></i>
+        <i class="fa-solid fa-battery-full fa-lg"></i>
         <i class="fa-solid fa-bolt-lightning"></i>
       </div>
     </div>
+
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <p class="welcome-header__text">
+        if you have a Kakao Account, log in with your email or Phone number.
+      </p>
+    </header>
+
+    <form id="Login-form">
+      <input type="text" placeholder="Email or phone number" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" value="Log in" />
+      <input type="submit" value="Sign Up" />
+      <a href="#">Find Kakao Account or Password</a>
+    </form>
+
     <script
       src="https://kit.fontawesome.com/f2ee266306.js"
       crossorigin="anonymous"
