--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       </p>
     </header>
 
-    <form id="Login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+    <form action="fridens.html" method="get" id="Login-form">
+      <input name="User name" type="text" placeholder="Email or phone number" />
+      <input name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log in" />
       <a href="#">Find Kakao Account or Password</a>
     </form>
