--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chats - Kokoa Clone</title>
+    <title>Settings - Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -23,37 +23,43 @@
       </div>
     </div>
 
-    <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
-      <div class="screen-header__icons">
+    <header class="alt-haeder">
+      <div class="alt-header__column">
+        <a href="more.html">
+        <i class="fa-solid fa-angle-left fa-2x"></i></a>
+      </div>
+      <div class="alt-header__column">
+        <h1 class="alt-header__title">Settings</h1>
+      </div>
+      <div class="alt-header__column">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-        <span><i class="fa-solid fa-comment-medical fa-lg"></i></span>
-        <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
       </div>
     </header>
 
     <main class="main-screen">
-      <a href="chat.html">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="screenshots/123.JPG"
-            class="user-component__avatar user-component__avatar"a
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Kakao Talk</h4>
-            <h6 class="user-component__subtitle">Please check My Kakao Account info</h6>
-          </div>
-        </div>
-
-        <div class="user-component__column">
-          <span class="user_component__time">21:22</span>
-          <div class="badge">1</div>
-
-        </div>
+     <ul class="settings-list">
+      <li class="settings__setting">
+        <div class="settings__setting-column">
+        <i class="fa-solid fa-bullhorn"></i>
+        <span>Notices</span>
       </div>
-      </a>
+      <div class="settings__setting-column"></div>
+      </li>
+      <li class="settings__setting">
+        <div class="settings__setting-column">
+        <i class="fa-solid fa-flask"></i>
+        <span>Kakao Lab</span>
+        </div>
+        <div class="settings__setting-column"></div>
+      </li>
+      <li class="settings__setting">
+        <div class="settings__setting-column">
+        <i class="fa-solid fa-circle-info"></i>
+        <span>Version</span>
+        </div>
+        <div class="settings__setting-column">Lastest Version</div>
+      </li>
+     </ul>
     </main>
 
     <nav class="nav">
@@ -66,7 +72,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fa-solid fa-comment fa-lg"></i></i
+            <i class="far fa-comment fa-lg"></i></i
           ></a>
         </li>
         <li class="nav__btn">
