--- a/chats.html
+++ b/chats.html
@@ -35,24 +35,26 @@
 
     <main class="main-screen">
       <a href="chat.html">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="screenshots/123.JPG"
-            class="user-component__avatar user-component__avatar"a
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Kakao Talk</h4>
-            <h6 class="user-component__subtitle">Please check My Kakao Account info</h6>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="screenshots/123.JPG"
+              class="user-component__avatar user-component__avatar"
+              a
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Kakao Talk</h4>
+              <h6 class="user-component__subtitle">
+                Please check My Kakao Account info
+              </h6>
+            </div>
+          </div>
+
+          <div class="user-component__column">
+            <span class="user_component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-
-        <div class="user-component__column">
-          <span class="user_component__time">21:22</span>
-          <div class="badge">1</div>
-
-        </div>
-      </div>
       </a>
     </main>
 
@@ -60,13 +62,13 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="Fridens.html"
-            ><i class="far  fa-user fa-lg"></i
+            ><i class="far fa-user fa-lg"></i
           ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fa-solid fa-comment fa-lg"></i></i
+            <i class="fa-solid fa-comment fa-lg"></i
           ></a>
         </li>
         <li class="nav__btn">
