--- a/fridens.html
+++ b/fridens.html
@@ -107,6 +107,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment"></i>
+    </div>
     <script
       src="https://kit.fontawesome.com/f2ee266306.js"
       crossorigin="anonymous"
