--- a/chat.html
+++ b/chat.html
@@ -76,6 +76,10 @@
       </div>
     </form>
 
+    <div id="no-mobile">
+      <span> Your screen is too big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/f2ee266306.js"
       crossorigin="anonymous"
