--- a/chats.html
+++ b/chats.html
@@ -84,6 +84,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span> Your screen is too big</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/f2ee266306.js"
       crossorigin="anonymous"
