--- a/fridens.html
+++ b/fridens.html
@@ -111,6 +111,11 @@
     <div id="splash-screen">
       <i class="fa-solid fa-comment"></i>
     </div>
+
+    <div id="no-mobile">
+      <span> Your screen is too big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/f2ee266306.js"
       crossorigin="anonymous"
