--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       <a href="#">Find Kakao Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+      <span> Your screen is too big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/f2ee266306.js"
       crossorigin="anonymous"
