--- a/more.html
+++ b/more.html
@@ -111,6 +111,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span> Your screen is too big</span>
+    </div> 
     <script
       src="https://kit.fontawesome.com/f2ee266306.js"
       crossorigin="anonymous"
