--- a/find.html
+++ b/find.html
@@ -107,7 +107,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span> Your screen is too big</span>
+      <span> Your screen is too big 사랑해요</span>
     </div>
     <script
       src="https://kit.fontawesome.com/f2ee266306.js"
