--- a/fridens.html
+++ b/fridens.html
@@ -113,7 +113,7 @@
     </div>
 
     <div id="no-mobile">
-      <span> Your screen is too 123 big</span>
+      <span> Your screen is too big</span>
     </div>
 
     <script
